--- a/All_Heart_Experiments.ipynb
+++ b/All_Heart_Experiments.ipynb
@@ -20,7 +20,7 @@
     "#    Mathematical problems in engineering 2015 (2015).\n",
     "\n",
     "# Paper3 (AEKOC+): Gautam, Chandan, Aruna Tiwari, and M. Tanveer. \"AEKOC+: Kernel ridge regression based Auto-Encoder for one-class classification using privileged information.\"\n",
-    "#    (Submitted after first revision in Cognitive computation, Springer.)\n",
+    "#    Cognitive Computation (2020): 1-14.\n",
     "\n",
     "# Paper4 (AEKOC/AAKELM): Gautam, Chandan, Aruna Tiwari, and Qian Leng. \"On the construction of extreme learning machine for online and offline one-class classification-An expanded toolbox.\"\n",
     "#   Neurocomputing 261 (2017): 126-143.\n",
